feat: fix logic